examples/misc/error/compilation/gen_alloc-index_diving.bfml
let main = [
  $build {
    a: array(_) {
      i: index;
      x: cell;
    }
  }

  $dive a@i
  $alloc {
    j: index;
  }

  + j:x
]